--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: ruby
 
+dist: xenial
 sudo: required
 
-addons:
-  postgresql: "9.4"
+branches:
+  only:
+    - master
 
 compiler:
   - gcc
@@ -11,21 +13,9 @@ compiler:
 rvm:
   - 2.2
 
-branches:
-  only:
-    - master
-
 before_install:
-  - sudo apt-get update -qq
-  #- sudo apt-get install -y postgresql-server-dev-9.4
-
-  - sudo apt-get install libgeos-dev
-  - sudo apt-get install libproj-dev
-
   - cd /home/travis/build/cropio/ruby-lwgeom
-
   - ./install-postgis-and-dependencies.sh
-
   - cd /home/travis/build/cropio/ruby-lwgeom
 
 before_script:
